# YibYib-Video-Downloader

./: .gitignore  README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
docs/: changelog.md  design_prd.md  layout.md  prd.md  step.md
src/: index.css  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
